# ai-lab

./: .gitignore  README.md  ROADMAP.md  ROADMAP.tr.md  pyproject.toml  requirements-dl.txt  requirements.txt  start.sh  stop.sh
.streamlit/: config.toml
core/: __init__.py  activations.py  engine.py  init.py  losses.py  neuron.py  nn.py  optim.py  viz.py
datasets/: README.md
experiments/tier2_training/: README.md
experiments/tier3_architectures/: README.md
experiments/tier4_attention/: README.md
experiments/tier5_llm/: README.md
gui/: README.md  app.py  catalog_tr.py  i18n.py  lab.py  lessons.py  math_lessons.py  math_lessons2.py  ml_lessons.py  ml_lessons2.py  ui.py
gui/views/: attention.py  backprop.py  cnn.py  dashboard.py  deep_playground.py  embeddings.py  experiments.py  infobase.py  math_calculus.py  math_information.py  math_numerical.py  math_optimization.py  math_overview.py  math_probability.py  math_vectors.py  ml_classification.py  ml_foundations.py  ml_model_selection.py  ml_overview.py  ml_practical.py  ml_python.py  ml_regression.py  ml_svm.py  ml_trees.py  ml_unsupervised.py  mlp.py  neurons_compute.py  optimizers.py  playground.py  posttraining.py  regularization.py  rnn.py  sampling.py  sandbox.py  study_coach.py  tests.py  the_chain.py  tokenization.py  transformer.py  two_neurons.py
infobase/: README.md
infobase/00_foundations/: activation-functions.md  backpropagation.md  gradient-descent.md  (+3 more)
learning/: README.md
papers/: README.md
tests/: README.md  test_core_math.py  test_e01_neuron.py  test_engine_gradcheck.py
(+62 files in other folders)
