[project]
name = "ai-lab"
version = "0.1.0"
description = "Personal AI lab: ANN/LLM fundamentals from a single neuron up to a small GPT."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
# Tier 0-1 need only numpy. matplotlib is for visualization helpers.
viz = ["matplotlib>=3.8"]
# The lab GUI (Streamlit dashboard over experiments/, infobase/, core/).
gui = ["streamlit>=1.36", "matplotlib>=3.8", "pandas>=2.0", "watchdog>=4.0"]
# Tiers 3+ (PyTorch). NOTE: pin these in a Python 3.12 venv if 3.14 wheels lag.
dl = ["torch>=2.2", "torchvision>=0.17"]
# Tier 5
llm = ["transformers>=4.40", "datasets>=2.19", "tokenizers>=0.19"]
dev = ["pytest>=8.0"]

# `pip install -e .` makes `import core` work from anywhere in the repo.
[tool.setuptools.packages.find]
include = ["core*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
